--- a/templates/index.html
+++ b/templates/index.html
@@ -509,7 +509,7 @@
                                         <span>Beach View</span>
 									</div>
 								</div>
-								<div class="details_info">
+		  						<div class="details_info">
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
                                     <div class="share-buttons">
@@ -519,6 +519,46 @@
 
 
 									<a class="viewmore_a" href="{%url 'varkalastays_premium_by_hudels_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+			                        <!-- mumulu_inn -->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'mumulu_inn' %}">
+								<img src="{% static 'image/property_img/mumulu_in_outside2.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'mumulu_inn' %}">
+									<h2>Mumulu Inn</h2>
+									</a>
+									<p><a href="#">Mumulu Inn</a></p>
+									<p>Beach side Property</p>
+									<div class="amenities">
+										<span>Free Parking</span>
+                                        <span>Free Wi-Fi </span>
+                                        <span>Housekeeping</span>
+                                        <span>First-aid Services</span>
+                                        <span>Newspaper</span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/mumulu_inn/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/mumulu_inn/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
+
+									<a class="viewmore_a" href="{%url 'mumulu_inn' %}">
 										<button class="view_more_btn">View more</button>
 									</a>
 								</div>
