--- a/templates/index.html
+++ b/templates/index.html
@@ -545,7 +545,7 @@
 										<span>Free Parking</span>
                                         <span>Free Wi-Fi </span>
                                         <span>Housekeeping</span>
-                                        <span>First-aid Services</span>
+                                        <span>Hot-Water</span>
                                         <span>Newspaper</span>
 									</div>
 								</div>
