--- a/templates/index.html
+++ b/templates/index.html
@@ -567,6 +567,47 @@
 					</div>
                     </div>
 
+			 <!-- kudos -->
+                    <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'kudos' %}">
+                                <img src="{% static 'image/property_img/kudos_main2.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'kudos' %}">
+                                    <h2>Kudos Admire Beach Resort</h2>
+                                    </a>
+                                    <p><a href="#">Kudos</a></p>
+                                    <p>Beach side Property</p>
+                                    <div class="amenities">
+                                        <span>Free Parking</span>
+                                        <span>Free Wi-Fi </span>
+                                        <span>Housekeeping</span>
+                                        <span>Breakfast</span>
+                                        <span>Non-smoking rooms</span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/kudos/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/kudos/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
+
+                                    <a class="viewmore_a" href="{%url 'kudos' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                   
                     </div> <br><br>
 
